package(default_visibility = ["//visibility:public"])
# CHANGE THIS LINE BACK:
# Was: load("@rules_rust//:bindgen/bindgen.bzl", "rust_bindgen_toolchain")
# To:
load("@rules_rust//bindgen:bindgen.bzl", "rust_bindgen_toolchain")

sh_binary(
    name = "clang_wrapper",
    srcs = ["clang_wrapper.sh"],
    data = ["@llvm_toolchain_host//:all_files"],
)

rust_bindgen_toolchain(
    name = "bindgen_toolchain_impl",
    bindgen = "@rules_rust_bindgen//:bindgen",
    clang = ":clang_wrapper",
    libclang = "@llvm_toolchain_host//lib:libclang.so",
)

toolchain(
    name = "bindgen_toolchain",
    toolchain = ":bindgen_toolchain_impl",
    toolchain_type = "@rules_rust//bindgen:toolchain_type",
)