# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

filegroup(
    name = "containers",
    srcs = [
        "provapp.service",
        "provapp.yml.tmpl",
        "registry_config.json.tmpl",
    ],
    visibility = ["//visibility:public"],
)

toolchain(
    name = "docker_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = "@docker_config//:toolchain",
    toolchain_type = "@io_bazel_rules_docker//toolchains/docker:toolchain_type",
)
