# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@crt//rules:pkg_win.bzl", "pkg_win")
load("//rules:windows_binary.bzl", "windows_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

WINDOWS_LIBS = [
    "-lbcrypt",  # aka: bcrypt.lib
    "-lcrypt32",  # aka: crypt32.lib
    "-ldbghelp",  # aka: dbghelp.lib
    "-lws2_32",  # aka: ws2_32.lib
    "-lstdc++",  # Standard C++ library
]

cc_library(
    name = "ate_client",
    srcs = ["ate_client.cc"],
    hdrs = ["ate_client.h"],
    copts = ["-Wno-switch-default"],
    defines = ["BAZEL_BUILD"],
    linkopts = select({
        "//:windows": WINDOWS_LIBS,
        "//conditions:default": [],
    }),
    deps = [
        "//src/pa/proto:pa_cc_grpc",
        "//src/transport:service_credentials",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/memory",
    ],
)

cc_test(
    name = "ate_client_test",
    srcs = ["ate_client_test.cc"],
    deps = [
        ":ate_client",
        "//src/testing:test_helpers",
        "@com_google_googletest//:gtest_main",
    ],
)

ATE_LIB_SRCS = [
    "ate_api_json_commands.cc",
    "ate_dll.cc",
    "ate_perso_blob.cc",
]

ATE_LIB_DEPS = [
    ":ate_client",
    "//src/ate/proto:dut_commands_cc_proto",
    "//src/pa/proto:pa_cc_grpc",
    "//src/proto:device_id_cc_proto",
    "//src/proto/crypto:common_cc_proto",
    "//src/proto/crypto:ecdsa_cc_proto",
    "@com_google_absl//absl/log",
    "@com_google_absl//absl/status",
    "@com_google_absl//absl/status:statusor",
]

cc_library(
    name = "ate_lib",
    srcs = ATE_LIB_SRCS,
    hdrs = [
        "ate_api.h",
        "ate_perso_blob.h",
    ],
    defines = ["BAZEL_BUILD"],
    linkopts = select({
        "//:windows": WINDOWS_LIBS,
        "//conditions:default": [],
    }),
    deps = ATE_LIB_DEPS,
)

cc_test(
    name = "ate_api_json_commands_test",
    srcs = ["ate_api_json_commands_test.cc"],
    deps = [
        ":ate_lib",
        "//src/testing:test_helpers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "ate_perso_blob_test",
    srcs = ["ate_perso_blob_test.cc"],
    deps = [
        ":ate_lib",
        "//src/testing:test_helpers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_binary(
    name = "ate_bin",
    srcs = [
        "ate_api.h",
        "ate_perso_blob.h",
    ] + ATE_LIB_SRCS,
    copts = ["-Wno-switch-default"],
    linkopts = select({
        "//:windows": WINDOWS_LIBS,
        "//conditions:default": [],
    }),
    linkshared = True,
    target_compatible_with = [
        "@platforms//os:windows",
    ],
    deps = ATE_LIB_DEPS,
)

windows_binary(
    name = "ate",
    dep = ":ate_bin",
)

pkg_win(
    name = "windows",
    srcs = [
        "ate_api.h",
        "ate_perso_blob.h",
        ":ate",
    ],
    platform = "@crt//platforms/x86_32:win32",
)

go_library(
    name = "ate_go_lib",
    srcs = ["perso_blob.go"],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/ate",
    visibility = ["//visibility:public"],
)

go_test(
    name = "perso_blob_test",
    srcs = ["perso_blob_test.go"],
    embed = [":ate_go_lib"],
    deps = ["@com_github_google_go_cmp//cmp:go_default_library"],
)
