# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//third_party/crt/rules:pkg_win.bzl", "pkg_win")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "grpconn",
    srcs = ["grpconn.go"],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/transport/grpconn",
    deps = [
        "//src/utils",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//peer",
    ],
)

go_test(
    name = "grpconn_test",
    srcs = ["grpconn_test.go"],
    embed = [":grpconn"],
)

WINDOWS_LIBS = [
    "-lbcrypt",  # aka: bcrypt.lib
    "-ldbghelp",  # aka: dbghelp.lib
    "-lws2_32",  # aka: ws2_32.lib
    "-lstdc++",  # Standard C++ library
]

cc_library(
    name = "service_credentials",
    srcs = ["service_credentials.cc"],
    hdrs = ["service_credentials.h"],
    defines = ["BAZEL_BUILD"],
    linkopts = select({
        "//:windows": WINDOWS_LIBS,
        "//conditions:default": [],
    }),
    deps = [
        "@com_github_grpc_grpc//:grpc++",
    ],
)

cc_test(
    name = "service_credentials_test",
    srcs = ["service_credentials_test.cc"],
    deps = [
        ":service_credentials",
        "@com_google_googletest//:gtest_main",
    ],
)
