# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load(
    "//rules:hsm.bzl",
    "hsm_config_tar",
    "hsm_spm_identity_key",
    "hsm_spm_identity_key_mldsa",
    "hsm_spm_wrapping_key",
)
load(
    "//rules:hsmtool.bzl",
    "HSMTOOL_CONST",
)

package(default_visibility = ["//visibility:public"])

hsm_spm_wrapping_key(
    name = "spm-rsa-wrap-v0",
)

# TODO(moidx): Switch to SECP384R1 once hsmtool supports exporting
# this curve.
hsm_spm_identity_key(
    name = "spm-hsm-id-v0",
    curve = HSMTOOL_CONST.ECC_CURVE.PRIME256V1,
)

hsm_spm_identity_key_mldsa(
    name = "spm-hsm-id-mldsa-v0",
)

hsm_config_tar(
    name = "spm_init",
    hsmtool_sequence = {
        ":spm-rsa-wrap-v0": "keygen",
        ":spm-hsm-id-v0": "keygen",
        ":spm-hsm-id-mldsa-v0": "keygen",
    },
)

hsm_config_tar(
    name = "spm_export",
    hsmtool_sequence = {
        ":spm-rsa-wrap-v0": "export",
        ":spm-hsm-id-v0": "export",
        ":spm-hsm-id-mldsa-v0": "export",
    },
)

filegroup(
    name = "release",
    srcs = [
        ":spm_export",
        ":spm_init",
        "//config/spm/sku/eg:eg_release",
        "//config/spm/sku/sival:release",
        "//config/spm/sku/test_mldsa:release",
    ],
)
