# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "cp",
    srcs = ["cp.cc"],
    data = [
        "//third_party/lowrisc/ot_bitstreams:cp_hyper310.bit",
        "//third_party/lowrisc/ot_bitstreams:cp_hyper340.bit",
    ],
    deps = [
        "//src/ate:ate_lib",
        "//src/ate/test_programs/dut_lib",
        "//src/pa/proto:pa_cc_proto",
        "//src/version",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_binary(
    name = "ft",
    srcs = ["ft.cc"],
    deps = [
        "//src/ate:ate_lib",
        "//src/ate/test_programs/dut_lib",
        "//src/pa/proto:pa_cc_proto",
        "//src/version",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@lowrisc_opentitan//sw/device/lib/dif:lc_ctrl",
    ],
)

cc_binary(
    name = "tls_test",
    srcs = ["tls_test.cc"],
    deps = [
        "//src/ate:ate_lib",
        "//src/version",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
)
