# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "pa_proto",
    srcs = ["pa.proto"],
    deps = [
        "//src/proto:device_id_proto",
        "//src/proto/crypto:cert_proto",
        "//src/proto/crypto:common_proto",
        "//src/proto/crypto:wrap_proto",
    ],
)

go_proto_library(
    name = "pa_go_pb",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/pa/proto/pa_go_pb",
    proto = ":pa_proto",
    deps = [
        "//src/proto:device_id_go_pb",
        "//src/proto/crypto:cert_go_pb",
        "//src/proto/crypto:common_go_pb",
        "//src/proto/crypto:wrap_go_pb",
    ],
)

cc_proto_library(
    name = "pa_cc_proto",
    deps = [":pa_proto"],
)

cc_grpc_library(
    name = "pa_cc_grpc",
    srcs = [":pa_proto"],
    generate_mocks = True,
    grpc_only = True,
    deps = [":pa_cc_proto"],
)
