# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "connector",
    srcs = ["connector.go"],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/proxy_buffer/store/connector",
    deps = [
    ],
)

go_library(
    name = "db",
    srcs = ["db.go"],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/proxy_buffer/store/db",
    deps = [
        ":connector",
        "//src/proto:registry_record_go_pb",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_library(
    name = "db_fake",
    srcs = ["db_fake.go"],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/proxy_buffer/store/db_fake",
    deps = [
        ":connector",
    ],
)

go_test(
    name = "db_test",
    srcs = ["db_test.go"],
    deps = [
        ":db",
        ":db_fake",
        "//src/proto:device_testdata",
        "//src/proto:registry_record_go_pb",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)

go_library(
    name = "filedb",
    srcs = ["filedb.go"],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/proxy_buffer/store/filedb",
    deps = [
        ":connector",
        "@com_github_glebarez_sqlite//:sqlite",
        "@io_gorm_gorm//:go_default_library",
    ],
)

go_test(
    name = "filedb_test",
    srcs = ["filedb_test.go"],
    deps = [
        ":connector",
        ":filedb",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
