# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "testdata",
    srcs = glob([
        "testdata/*",
    ]),
)

go_library(
    name = "spm",
    srcs = ["spm.go"],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/spm/services/spm",
    deps = [
        ":se",
        ":skucfg",
        "//src/ate:ate_go_lib",
        "//src/pa/proto:pa_go_pb",
        "//src/pk11",
        "//src/proto:device_id_go_pb",
        "//src/proto:validators",
        "//src/proto/crypto:cert_go_pb",
        "//src/proto/crypto:common_go_pb",
        "//src/proto/crypto:mldsa_go_pb",
        "//src/spm/proto:spm_go_pb",
        "//src/spm/services/skumgr",
        "//src/transport/auth_service:session_token",
        "//src/utils",
        "//src/utils:devid",
        "@in_gopkg_yaml_v3//:go_default_library",
        "@io_bazel_rules_go//go/tools/bazel",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_x_crypto//bcrypt:go_default_library",
    ],
)

go_library(
    name = "se",
    srcs = [
        "se.go",
        "se_pk11.go",
    ],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/spm/services/se",
    deps = [
        "//src/pk11",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_x_crypto//sha3",
    ],
)

go_test(
    name = "se_pk11_test",
    srcs = ["se_pk11_test.go"],
    data = [":testdata"],
    embed = [":se"],
    deps = [
        "//src/pk11",
        "//src/pk11:test_support",
        "//src/utils",
        "@io_bazel_rules_go//go/tools/bazel",
        "@org_golang_x_crypto//hkdf",
        "@org_golang_x_crypto//sha3",
    ],
)

go_library(
    name = "skucfg",
    srcs = ["skucfg.go"],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/spm/services/skucfg",
)
