# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "cert-util",
    srcs = ["src/main.rs"],
    deps = [
        "@crate_index//:anyhow",
        "@crate_index//:clap",
        "@crate_index//:const-oid",
        "@crate_index//:der",
        "@crate_index//:rand",
        "@crate_index//:sha2",
        "@crate_index//:x509-cert",
    ],
)
