# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load(
    "//rules:hsm.bzl",
    "hsm_certgen",
    "hsm_certgen_tar",
    "hsm_certificate_authority_intermediate",
    "hsm_certificate_authority_intermediate_mldsa",
    "hsm_config_tar",
)
load(
    "//rules:hsmtool.bzl",
    "HSMTOOL_CONST",
)

package(default_visibility = ["//visibility:public"])

hsm_certificate_authority_intermediate_mldsa(
    name = "test_mldsa-dice-key-mldsa-v0",
)

hsm_certificate_authority_intermediate(
    name = "test_mldsa-ext-key-p256-v0",
    curve = HSMTOOL_CONST.ECC_CURVE.PRIME256V1,
)

hsm_certificate_authority_intermediate_mldsa(
    name = "test_mldsa-ext-key-mldsa-v0",
)

hsm_certgen(
    name = "ca_int_dice",
    ca_key = "//config/spm/sku/eg/common:opentitan-ca-root-v0",
    config = ":ca_int_dice.conf",
    key = ":test_mldsa-dice-key-mldsa-v0",
)

hsm_certgen(
    name = "ca_int_ext",
    ca_key = "//config/spm/sku/eg/common:opentitan-ca-root-v0",
    config = ":ca_int_ext.conf",
    key = ":test_mldsa-ext-key-p256-v0",
)

hsm_certgen(
    name = "ca_int_ext_mldsa",
    ca_key = "//config/spm/sku/eg/common:opentitan-ca-root-v0",
    config = ":ca_int_ext.conf",
    key = ":test_mldsa-ext-key-mldsa-v0",
)

hsm_config_tar(
    name = "spm_ca_keygen",
    hsmtool_sequence = {
        ":test_mldsa-dice-key-mldsa-v0": "keygen",
        ":test_mldsa-ext-key-p256-v0": "keygen",
        ":test_mldsa-ext-key-mldsa-v0": "keygen",
    },
)

hsm_certgen_tar(
    name = "ca_intermediate_certgen",
    certs = [
        ":ca_int_dice",
        ":ca_int_ext",
        ":ca_int_ext_mldsa",
    ],
)

filegroup(
    name = "release",
    srcs = [
        ":ca_int_dice.conf",
        ":ca_int_ext.conf",
        ":ca_intermediate_certgen",
        ":spm_ca_keygen",
    ],
)