# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "otlib_wrapper",
    srcs = [
        "src/lib.rs",
    ],
    deps = [
        "@@rules_rust~~crate~crate_index__regex-1.9.4//:regex",
        "@crate_index//:anyhow",
        "@crate_index//:arrayvec",
        "@crate_index//:crc",
        "@lowrisc_opentitan//sw/host/opentitanlib",
        "@lowrisc_opentitan//sw/host/provisioning/cp_lib",
        "@lowrisc_opentitan//sw/host/provisioning/ujson_lib",
        "@lowrisc_opentitan//sw/host/provisioning/util_lib",
    ],
)
