# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "tbsgen_lib",
    srcs = ["tbsgen.go"],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/spm/services/testutils/tbsgen",
    deps = [
        "//src/pk11",
        "//src/spm/services:se",
        "//src/spm/services/skumgr",
        "//src/utils",
    ],
)

go_binary(
    name = "tbsgen",
    srcs = ["tbsgen/main.go"],
    deps = [
        ":tbsgen_lib",
    ],
)
