# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load(
    "//rules:hsm.bzl",
    "hsm_certgen",
    "hsm_certgen_tar",
    "hsm_certificate_authority_root",
    "hsm_certificate_authority_root_mldsa",
    "hsm_config_tar",
    "hsm_generic_secret",
    "hsm_sku_rma_key",
    "hsm_sku_wrapping_key",
)
load(
    "//rules:hsmtool.bzl",
    "HSMTOOL_CONST",
)

package(default_visibility = ["//visibility:public"])

hsm_sku_wrapping_key(
    name = "eg-aes-wrap-v0",
    wrapping_key = "//config/spm/sku:spm-rsa-wrap-v0",
    wrapping_mechanism = select({
        "//:dev_env": "RsaPkcs",
        "//:prod_env": "RsaPkcsOaep",
        "//conditions:default": "RsaPkcs",
    }),
)

hsm_sku_rma_key(
    name = "sku-eg-rsa-rma-v0",
)

# All SKUs except pi01 SKU use the same root CA.
hsm_certificate_authority_root(
    name = "opentitan-ca-root-v0",
    curve = HSMTOOL_CONST.ECC_CURVE.PRIME256V1,
)

# pi01 SKU has own root CA.
hsm_certificate_authority_root(
    name = "pi01-ca-root-v0",
    curve = HSMTOOL_CONST.ECC_CURVE.PRIME256V1,
)

# test_mldsa SKU has own MLDSA root CA.
hsm_certificate_authority_root_mldsa(
    name = "test_mldsa-root-key-mldsa-v0",
)

hsm_generic_secret(
    name = "eg-kdf-hisec-v0",
    wrapping_key = ":eg-aes-wrap-v0",
    wrapping_mechanism = select({
        "//:dev_env": "AesKeyWrap",
        "//:prod_env": "VendorThalesAesKw",
        "//conditions:default": "AesKeyWrap",
    }),
)

hsm_generic_secret(
    name = "eg-kdf-losec-v0",
    wrapping_key = ":eg-aes-wrap-v0",
    wrapping_mechanism = select({
        "//:dev_env": "AesKeyWrap",
        "//:prod_env": "VendorThalesAesKw",
        "//conditions:default": "AesKeyWrap",
    }),
)

hsm_certgen(
    name = "ca_root",
    config = ":ca_root.conf",
    key = ":opentitan-ca-root-v0",
    root_cert = True,
)

hsm_certgen(
    name = "pi01_ca_root",
    config = ":pi01_ca_root.conf",
    key = ":pi01-ca-root-v0",
    root_cert = True,
)

hsm_certgen(
    name = "ca_root_mldsa",
    config = ":ca_root_mldsa.conf",
    key = ":test_mldsa-root-key-mldsa-v0",
    root_cert = True,
)

hsm_config_tar(
    name = "offline_init",
    hsmtool_sequence = {
        ":opentitan-ca-root-v0": "keygen",
        ":pi01-ca-root-v0": "keygen",
        ":test_mldsa-root-key-mldsa-v0": "keygen",
        ":eg-aes-wrap-v0": "keygen",
        ":eg-kdf-hisec-v0": "keygen",
        ":eg-kdf-losec-v0": "keygen",
        ":sku-eg-rsa-rma-v0": "keygen",
    },
)

hsm_config_tar(
    name = "offline_export",
    hsmtool_sequence = {
        "//config/spm/sku:spm-rsa-wrap-v0": "import",
        ":eg-aes-wrap-v0": "export",
        ":eg-kdf-hisec-v0": "export",
        ":eg-kdf-losec-v0": "export",
        ":sku-eg-rsa-rma-v0": "export",
    },
)

# Initialize the SPM instance with the shared secrets produced by
# offline_export.
hsm_config_tar(
    name = "spm_sku_init",
    hsmtool_sequence = {
        ":eg-aes-wrap-v0": "import",
        ":eg-kdf-hisec-v0": "import",
        ":eg-kdf-losec-v0": "import",
        ":sku-eg-rsa-rma-v0": "import",
    },
)

hsm_certgen_tar(
    name = "ca_root_certgen",
    certs = [
        ":ca_root",
        ":pi01_ca_root",
        ":ca_root_mldsa",
    ],
)

filegroup(
    name = "release",
    srcs = [
        ":ca_root.conf",
        ":ca_root_certgen",
        ":offline_export",
        ":offline_init",
        ":pi01_ca_root.conf",
        ":spm_sku_init",
        ":ca_root_mldsa.conf",
    ],
)
